--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,14 @@
-html,
-body {
-  padding: 0;
+@import "~normalize.css";
+ul, ol, dd {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  list-style: none;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0,
+  font-size: inherit,
+  font-weight: inherit,
 }
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+p {
+  margin: 0;
 }
