--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,14 +1,25 @@
-@import "~normalize.css";
-ul, ol, dd {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+@charset "UTF-8";
+
+html {
+  font-size: 62.5%;
 }
-h1, h2, h3, h4, h5, h6 {
+
+body {
   margin: 0;
-  font-size: inherit;
-  font-weight: inherit;
 }
+
+a {
+  color: gray;
+}
+
+a:hover {
+  filter: brightness(1.3);
+}
+
 p {
+  font-size: 2rem;
+}
+
+figure {
   margin: 0;
 }
