--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,21 +5,48 @@ html {
 }
 
 body {
+  line-height: 2.6rem;
   margin: 0;
+  /* background-color: #f5f5f5; */
 }
 
 a {
   color: gray;
+  text-decoration: none;
 }
 
 a:hover {
-  filter: brightness(1.3);
+  filter: brightness(1.2);
+}
+
+h1 {
+  font-size: 2.1rem;
+}
+h2 {
+  font-weight: 600;
+  font-size: 1.8rem;
+  /* padding-bottom: 1.rem; */
+}
+h3 {
+  font-size: 1.6rem;
+}
+
+h4 {
+  font-size: 1.6rem;
 }
 
 p {
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 
 figure {
   margin: 0;
+}
+
+:target::before {
+  content: '';
+  display: block;
+  height: 72px;
+  margin-top: -72px;
+  visibility: hidden;
 }
